syntax = "proto3";

package domain;

option go_package = "./domain";

import "google/protobuf/timestamp.proto";
import "domain/date.proto";
import "domain/address.proto";

message CustomerContact {
  optional string contactEmail = 1;
  optional string contactMobile = 2;
  optional string contactPhone = 3;
  optional Address billingAddress = 4;
}

message CustomerPersonal {
  optional string title = 1;
  optional string firstName = 2;
  string lastName = 3;
  optional string middleName = 4;
  Gender gender = 5;
  optional Date dateOfBirth = 6;
  optional bool online = 7;
}

enum Gender {
  GENDER_MALE = 0;
  GENDER_FEMALE = 1;
  GENDER_DIVERSE = 2;
}
